@@ -42,6 +42,10 @@ in conjunction with this overlay.  They are described in
 .BR slapd\-ldap (5),
 and they also need to be prefixed by
 .BR chain\- .
+
+Note: this overlay is built into the \fIldap\fP backend; it is not 
+a separate module.
+
 .TP
 .B overlay chain
 This directive adds the chain overlay to the current backend.
